# matrix-rs

./: Cargo.toml  README.md  pyproject.toml  raport.ipynb  sprawozdanie.ipynb
python/: m.ipynb
scripts/: python_check.sh  rust_check.sh
src/: constraints.rs  lib.rs  mat_multiply.rs  validation.rs
tests/integration/: mod.rs  utils.rs
