[package]
name = "matrix-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "matrix_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.24.0"
thiserror = "2.0.12"

[dev-dependencies]
rand = "0.9.0"
nalgebra = "0.33.2"