[project]
name = "matrix-rs"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "notebook>=7.3.3",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"
